--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,7 +25,7 @@ jobs:
       uses: actions/setup-python@v4
 
     - name: Run Pre-commit
-      uses: pre-commit/action@v3
+      uses: pre-commit/action@v3.0.0
 
   test:
     name: Build and run unittests
@@ -39,8 +39,17 @@ jobs:
     - name: Install Python dependencies
       run: python -m pip install tox codecov
 
-    - name: Run unit tests (via tox)
-      run: tox
+    - name: Test isort (via tox)
+      run: tox -e isort
+      if: always()
+
+    - name: Test unittests (via tox)
+      run: tox -e django40
+      if: always()
+
+    - name: Test flake8 (via tox)
+      run: tox -e flake8
+      if: always()
 
   docs:
     name: Build docs
