CI: Fix wrong html archive input dirtory
This is just wrong directory and nothing will be published.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -78,5 +78,5 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: html-docs-build
-        path: docs/_build/html
+        path: docs/_build
         retention-days: 7
