Do not let Tox install all debencys with every step
Right now Tox will always install all debecyes. This is not needed most
of the time. This will make CI whole lot faster.

--- a/tox.ini
+++ b/tox.ini
@@ -15,9 +15,11 @@ envlist =
 [testenv]
 basepython = python3
 usedevelop = false
+skip_install = True
 changedir = {toxinidir}
 
 [testenv:django40]
+skip_install = False
 deps =
     django40: django==4.0.*
 commands = python manage.py test
