Make deployment files for heroku
At least for now I want to host this app in Heroku. Make prober files
for it. Also did some dirty thing with installing django_heroku, but I
will remove it later.

Also make some list what is needed to docs.

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,10 @@
 #
 # SPDX-License-Identifier: CC0-1.0
 
+dash>=2.0.0
 Django==4.0.6
+# TODO: Remove this
+django_heroku
 django_plotly_dash
 geopy
 pandas
